# sprd

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml  tst.yml  tst.yml.disabled
docs/: LICENSE-APACHE
src/: api.rs  commands.rs  download.rs  event.rs  file_download.rs  gz.rs  http_download.rs  lib.rs  main.rs  metadata_query.rs  pool_downloader.rs  rapid_download.rs  util.rs  validation.rs
src/cmds/: check_sdp.rs  download.rs  download_registry.rs  download_repo.rs  download_sdp.rs  fix.rs  mod.rs  validate.rs
src/metadata/: metadata_file.rs  metadata_local.rs  metadata_rest.rs  mod.rs
src/rapid/: mod.rs  parsing.rs  rapid_store.rs  types.rs
test_utils/: .gitignore  Cargo.toml
test_utils/src/: lib.rs
tests/: prd_compare.rs
