[package]
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
description = "Modern Spring downloader built with Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sprd"
readme = "README.md"
repository = "https://github.com/gajop/sprd"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
dirs = "4.0.0"
flate2 = "1.0.22"
hyper = {version = "0.14.16", features = ["client", "http1", "http2"]}
hyper-tls = "0.5.0"
md-5 = "0.10.0"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
thiserror = "1.0"
tokio = {version = "1.16.1", features = ["full"]}

# TODO: Binary only, remove from lib
atty = "0.2"
clap = {version = "3.0.14", features = ["derive"]}
indicatif = "0.16.2"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.3.0"
test_utils = {path = "test_utils"}
