[package]
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
description = "Modern Spring downloader built with Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sprd"
readme = "README.md"
repository = "https://github.com/gajop/sprd"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
flate2 = "1.0"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = "0.24"
md-5 = "0.10.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"] }

# TODO: Binary only, remove from lib
atty = "0.2"
clap = { version = "4.1", features = ["derive"] }
indicatif = "0.17"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.3"
test_utils = {path = "test_utils"}
